Implement Bezier & B-Spline Curves

--- a/Sample UI/index.html
+++ b/Sample UI/index.html
@@ -12,6 +12,7 @@
             <button id="save-btn">Save</button>
             <button id="undo-btn">Undo</button>
             <button id="clear-btn">Clear</button>
+            <button id="switch-btn">SwitchCurve</button>
         </div>
 		<canvas id="canvas"></canvas>
 		<script src="canvas.js"></script>
