adding webcam as background

--- a/Sample UI/index.html
+++ b/Sample UI/index.html
@@ -14,7 +14,10 @@
             <button id="clear-btn">Clear</button>
             <button id="switch-btn">SwitchCurve</button>
         </div>
+        
+        <video id="video" autoplay></video>
 		<canvas id="canvas"></canvas>
+		
 		<script src="canvas.js"></script>
 	</body>
 </html>
